# Masks_Project

./: .coverage  .env.example  .gitignore  README.md  main.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_widget_py.html
src/: external_api.py  file_readers.py  filters.py  generators.py  masks.py  processing.py  utils.py  widget.py
tests/: conftest.py  fixtures.py  test_decorators.py  test_external_api.py  test_file_readers.py  test_filters.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
tests/test_files/: bad_data.json  test_good_data.csv  test_good_data.xlsx
