[tool.poetry]
name = "masks-project"
version = "0.1.0"
description = ""
authors = ["MaxZ <maxzonoff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.0"

black = "^24.4.2"
[tool.black]
exclude = '''(
      \.eggs
    | \.hg
    | \.mypy_cache
    | \.tox
    | dist)
   /| foo.py )'''

isort = "^5.13.2"

mypy = "^1.10.1"
[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
